Add MongoDB database using Mongoose

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog-website",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +12,7 @@
   "description": "",
   "dependencies": {
     "blog-website": "file:",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mongoose": "^8.9.5"
   }
 }
